[package]
name = "phantasm"
description = "Small lib that helps with variance"
version = "0.1.0"
authors = ["Waffle <waffle.lapkin@gmail.com>"]
license = "MIT"
edition = "2018"

repository = "https://github.com/WaffleLapkin/phantasm/"
homepage = "https://github.com/WaffleLapkin/phantasm/"
documentation = "https://docs.rs/phantasm/"
readme = "README.md"

keywords = ["no_std", "phantom", "unused"]
categories = ["no-std", "rust-patterns"]

exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# none
